--- a/README
+++ b/README
@@ -3,11 +3,11 @@ Term Project Software Architecture WS19/20 Group 7 Team 2
 
 Team member:
 
-Meyer David
-Kugler Christoph
-Schenk Benedikt
-Schießl Philipp
-Wittauer Christoph
+M. David
+K. Christoph
+S. Benedikt
+S. Philipp
+W. Christoph
 
 
 
